# AIDCv1.0.0

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/components/: AnthologyBrowser.tsx  CameraEquipmentDB.tsx  CastManager.tsx  CouncilManager.tsx  MusicVideoMode.tsx  ProductionBoard.tsx  StoryboardGenerator.tsx  VideoCompiler.tsx
src/app/lib/: anthologies.ts  audioDB.ts  cameraEquipment.ts  experts.ts  gemini.ts  store.ts  tts.ts
src/app/lib/video/: providers.ts
src/app/types/: index.ts
src/styles/: app.css
src/types/: index.ts
