[package]
name = "ai-directors-chair"
version = "1.0.0"
description = "AI-powered video production suite"
authors = ["Timothy"]
license = "Proprietary"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all", "path-all", "window-all"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
